--- a/App.xaml
+++ b/App.xaml
@@ -5,7 +5,7 @@
 
     <Application.Resources>
         <Style x:Key="SidebarButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="Pink"/>
+            <Setter Property="Background" Value="#BBFFFF"/>
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="BorderBrush" Value="#689F38"/>
