--- a/Views/BaoCaoView.xaml
+++ b/Views/BaoCaoView.xaml
@@ -1,41 +1,82 @@
 ﻿<UserControl x:Class="PlantManagement.Views.BaoCaoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1168" Background="Pink">
+             Background="#B0E0E6">
     <Grid>
-        <!-- Nút điều hướng -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15,10,10,5">
-            <Button x:Name="NguoiDungButton" Content="Người Dùng" Background="LightGreen" Click="NguoiDung_Click" Width="100" Height="25" Margin="5"/>
-            <Button x:Name="LichSuTruyCapButton" Content="Lịch Sử Truy Cập" Background="LightGreen" Click="LichSuTruyCap_Click" Width="120" Height="25" Margin="5"/>
-            <Button x:Name="LichSuTacDongButton" Content="Lịch Sử Tác Động" Background="LightGreen" Click="LichSuTacDong_Click" Width="120" Height="25" Margin="5"/>
-            <Button x:Name="TongHopButton" Content="Tổng Hợp" Background="LightGreen" Click="TongHop_Click" Width="100" Height="25" Margin="5"/>
-        </StackPanel>
+        <!-- Thanh trượt Báo Cáo - Thống Kê -->
+        <Expander x:Name="BaoCaoExpander"
+                  Header="Báo Cáo - Thống Kê"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Margin="10"
+                  Foreground="Black"
+                  Width="150"
+                  Background="CornflowerBlue"
+                  FontWeight="Bold"
+                  IsExpanded="False"
+                  Panel.ZIndex="100">
+            <StackPanel Orientation="Vertical">
+                <Button x:Name="NguoiDungButton"
+                        Content="Người Dùng"
+                        Background="White"
+                        Click="ExpanderButton_Click"
+                        Margin="5"/>
+                <Button x:Name="LichSuTruyCapButton"
+                        Content="Lịch Sử Truy Cập"
+                        Background="White"
+                        Click="ExpanderButton_Click"
+                        Margin="5"/>
+                <Button x:Name="LichSuTacDongButton"
+                        Content="Lịch Sử Tác Động"
+                        Background="White"
+                        Click="ExpanderButton_Click"
+                        Margin="5"/>
+                <Button x:Name="TongHopButton"
+                        Content="Tổng Hợp"
+                        Background="White"
+                        Click="ExpanderButton_Click"
+                        Margin="5"/>
+            </StackPanel>
+        </Expander>
 
-        <!-- DataGrid để hiển thị danh sách người dùng -->
-        <DataGrid x:Name="UserDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
-                  HorizontalAlignment="Center" VerticalAlignment="Center"
-                  CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+        <!-- Grid để chứa nội dung báo cáo full màn hình -->
+        <Grid Margin="0,40,0,0">
+            <DataGrid x:Name="UserDataGrid"
+                      AutoGenerateColumns="True"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      IsReadOnly="True"
+                      Visibility="Collapsed"/>
 
-        <!-- DataGrid để hiển thị lịch sử truy cập -->
-        <DataGrid x:Name="LoginHistoryDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
-                  HorizontalAlignment="Center" VerticalAlignment="Center"
-                  CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+            <DataGrid x:Name="LoginHistoryDataGrid"
+                      AutoGenerateColumns="True"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      IsReadOnly="True"
+                      Visibility="Collapsed"/>
 
-        <!-- DataGrid để hiển thị lịch sử tác động -->
-        <DataGrid x:Name="ImpactHistoryDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
-          HorizontalAlignment="Center" VerticalAlignment="Center"
-          CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
-        
-        <!-- DataGrid để hiển thị thông tin tổng hợp -->
-        <DataGrid x:Name="TongHopDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
-          HorizontalAlignment="Center" VerticalAlignment="Center"
-          CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+            <DataGrid x:Name="ImpactHistoryDataGrid"
+                      AutoGenerateColumns="True"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      IsReadOnly="True"
+                      Visibility="Collapsed"/>
 
+            <DataGrid x:Name="TongHopDataGrid"
+                      AutoGenerateColumns="True"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      IsReadOnly="True"
+                      Visibility="Collapsed"/>
+        </Grid>
 
-
-        <!-- TextBlock để hiển thị thông báo -->
-        <TextBlock x:Name="MessagePlaceholder" Text="Thông báo sẽ được hiển thị tại đây." 
-                   HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" 
-                   Visibility="Collapsed" Foreground="DarkBlue"/>
+        <!-- Thông báo -->
+        <TextBlock x:Name="MessagePlaceholder"
+                   Text="Thông báo sẽ được hiển thị tại đây."
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="16"
+                   Visibility="Collapsed"
+                   Foreground="DarkBlue"/>
     </Grid>
 </UserControl>
