--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -1,15 +1,24 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyThongTinTaiKhoanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="Pink" >
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="1168" Background="#B0E0E6">
+
     <Grid>
-        <!-- Dòng chữ "Thông Tin Tài Khoản" ở giữa phía trên -->
-        <TextBlock FontSize="20" FontWeight="Bold" Text="Thông Tin Tài Khoản" 
-                   HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0"/>
+        <!-- Tạo một dòng chứa logo và dòng chữ "Thông Tin Tài Khoản" -->
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
+            <!-- Thêm Logo bên trái -->
+            <Image Source="Assets/Logo.png" Width="40" Height="40" VerticalAlignment="Center" Margin="10,0,20,0"/>
+
+            <!-- Dòng chữ "Thông Tin Tài Khoản" -->
+            <TextBlock FontSize="20" FontWeight="Bold" Text="Thông Tin Tài Khoản" VerticalAlignment="Center"/>
+        </StackPanel>
 
         <!-- Phần hiển thị thông tin tài khoản -->
-        <StackPanel x:Name="AccountInfoPanel">
-            <TextBlock FontSize="16" FontWeight="Bold" Text="Họ và tên:" Margin="20,120,0,0"/>
+        <StackPanel x:Name="AccountInfoPanel" Margin="0,120,0,0">
+            <TextBlock FontSize="16" FontWeight="Bold" Text="Họ và tên:" Margin="20,10,0,0"/>
             <TextBlock x:Name="FullNameTextBlock" FontSize="16" Margin="20,10,0,20"/>
 
             <TextBlock FontSize="16" FontWeight="Bold" Text="Tên đăng nhập:" Margin="20,0,0,0" />
@@ -23,10 +32,10 @@
         </StackPanel>
 
         <!-- Nút đổi mật khẩu ở góc phải dưới -->
-        <Button x:Name="ForgotPasswordButton" Content="Đổi mật khẩu" Background="Green" Foreground="White"  FontSize="16" Height="25" Width="120" Click="ForgotPasswordButton_Click" 
-                VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10,20,30,20" />
+        <Button x:Name="ForgotPasswordButton" Content="Đổi mật khẩu" Background="Green" Foreground="White" FontSize="16" Height="25" Width="120" 
+                Click="ForgotPasswordButton_Click" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10,20,30,20" />
 
         <!-- Khu vực hiển thị ResetPasswordView -->
-        <ContentControl x:Name="ResetPasswordContent"  Visibility="Collapsed" />
+        <ContentControl x:Name="ResetPasswordContent" Visibility="Collapsed" />
     </Grid>
 </UserControl>
