--- a/Views/ResetPasswordView.xaml
+++ b/Views/ResetPasswordView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.ResetPasswordView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="Pink">
+             Height="600" Width="1165" Background="#B0E0E6">
     <Grid>
         <!-- Logo quay lại ở góc trên cùng bên trái -->
         <Button x:Name="BackButton" Width="40" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Background="Transparent" BorderBrush="Transparent" Click="BackButton_Click">
