--- a/Views/BaoCaoView.xaml
+++ b/Views/BaoCaoView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.BaoCaoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="#B0E0E6">
+             Background="LightGreen">
     <Grid>
         <!-- Thanh trượt Báo Cáo - Thống Kê -->
         <Expander x:Name="BaoCaoExpander"
@@ -54,13 +54,19 @@
                       VerticalAlignment="Stretch"
                       IsReadOnly="True"
                       Visibility="Collapsed"/>
-
             <DataGrid x:Name="ImpactHistoryDataGrid"
-                      AutoGenerateColumns="True"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch"
-                      IsReadOnly="True"
-                      Visibility="Collapsed"/>
+          AutoGenerateColumns="False"
+          HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
+          IsReadOnly="True"
+          Visibility="Collapsed">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Tên người dùng" Binding="{Binding UserName}" />
+                    <DataGridTextColumn Header="Số lần đăng nhập" Binding="{Binding LoginCount}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+
 
             <DataGrid x:Name="TongHopDataGrid"
                       AutoGenerateColumns="True"
