--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="1168" Background="#B0E0E6">
+             d:DesignHeight="600" d:DesignWidth="1168" Background="#FFFFFF">
 
     <Grid>
         <!-- Tạo một dòng chứa logo và dòng chữ "Thông Tin Tài Khoản" -->
