--- a/Views/ResetPasswordView.xaml
+++ b/Views/ResetPasswordView.xaml
@@ -1,7 +1,10 @@
 ﻿<UserControl x:Class="PlantManagement.Views.ResetPasswordView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="#B0E0E6">
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ mc:Ignorable="d"
+ d:DesignHeight="600" d:DesignWidth="1168" Background="LightBlue">
     <Grid>
         <!-- Logo quay lại ở góc trên cùng bên trái -->
         <Button x:Name="BackButton" Width="40" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Background="Transparent" BorderBrush="Transparent" Click="BackButton_Click">
