--- a/Views/QuanLyNguoiDungView.xaml
+++ b/Views/QuanLyNguoiDungView.xaml
@@ -1,46 +1,73 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyNguoiDungView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Pink">
+             Background="LightGreen">
     <Grid>
-        <!-- Header -->
-        <TextBlock Text="Thông tin người dùng" FontSize="24" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="0,10,0,20" />
+        <!-- Thanh trượt Quản Lý Người Dùng -->
+        <Expander x:Name="QuanLyNguoiDungExpander"
+                  Header="Quản Lý Người Dùng"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Margin="10"
+                  Foreground="Black"
+                  Width="150"
+                  Background="CornflowerBlue"
+                  FontWeight="Bold"
+                  IsExpanded="False"
+                  Panel.ZIndex="100">
+            <StackPanel Orientation="Vertical">
+               
+                <Button x:Name="UserButton" Content="Người Dùng" Background="White" Click="ExpanderButton_Click" Margin="5"/>
+                <Button x:Name="PermissionButton" Content="Quản Lý Quyền" Background="White" Click="ExpanderButton_Click" Margin="5"/>
+                <Button x:Name="AccessHistoryButton" Content="Lịch Sử Truy Cập" Background="White" Click="ExpanderButton_Click" Margin="5"/>
+                <Button x:Name="ActionHistoryButton" Content="Lịch Sử Tác Động" Background="White" Click="ExpanderButton_Click" Margin="5"/>
+            </StackPanel>
+        </Expander>
 
-        <!-- DataGrid hiển thị thông tin -->
-        <DataGrid ItemsSource="{Binding Accounts}" AutoGenerateColumns="False" 
-                  Margin="10,50,10,50" IsReadOnly="False" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                  SelectedItem="{Binding SelectedAccount, Mode=TwoWay}">
-            
-            <DataGrid.Columns>
-                <!-- ID -->
-                <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="50" IsReadOnly="True"/>
-                <!-- Tên đăng nhập -->
-                <DataGridTextColumn Header="Tên đăng nhập" Binding="{Binding UserName}" Width="*"/>
-                <!-- Họ và tên -->
-                <DataGridTextColumn Header="Họ và tên" Binding="{Binding FullName}" Width="*"/>
-                <!-- Email -->
-                <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="*"/>
-                <!-- Ngày tạo tài khoản -->
-                <DataGridTextColumn Header="Ngày tạo tài khoản" Binding="{Binding CreatedAt}" Width="150" IsReadOnly="True"/>
-                <!-- ID nhóm (ID_Group) -->
-                <DataGridTextColumn Header="ID nhóm" Binding="{Binding GroupName}" Width="100"/>
-                <!-- Mật khẩu -->
-                <DataGridTextColumn Header="Mật khẩu" Binding="{Binding Password}" Width="150"/>
-                <!-- Trạng thái -->
-                <DataGridCheckBoxColumn Header="Trạng thái" Binding="{Binding IsActive}" Width="100"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <!-- Nút lưu và nút xóa -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
-            <Button Content="Lưu" Width="60" Height="30" Margin="0,0,10,0"
-                    Click="SaveChanges_Click"/>
-            <Button Content="Xóa" Width="60" Height="30"
-                    Click="DeleteAccount_Click"/>
+        <!-- Tìm kiếm -->
+        <StackPanel x:Name="SearchUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchUserTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchUserBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchUserButton_Click"/>
         </StackPanel>
+
+        <StackPanel x:Name="SearchAccessHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchAccessHistoryTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchAccessHistoryBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchAccessHistoryButton_Click"/>
+        </StackPanel>
+
+        <StackPanel x:Name="SearchActionHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchActionHistoryTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchActionHistoryBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchActionHistoryButton_Click"/>
+        </StackPanel>
+
+        <!-- Grid để chứa nội dung -->
+        <Grid Margin="0,40,0,0">
+            <DataGrid x:Name="UserGroupDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" Visibility="Collapsed"/>
+
+            <Grid>
+                <DataGrid x:Name="UserDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="False" Visibility="Collapsed"  />
+
+                <!-- Nút Cập nhật và Xóa -->
+                <StackPanel x:Name="UpdateDeleteUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Visibility="Collapsed">
+                    <Button x:Name="UpdateUserButton" Content="Cập nhật" Width="80" Height="30"  Background="#FF0B930B" Foreground="White" FontWeight="Bold" Click="UpdateUserButton_Click" />
+                    <Button x:Name="DeleteUserButton" Content="Xóa" Width="60" Height="30" Background="#FFE32B2B" Foreground="White" FontWeight="Bold" Click="DeleteUserButton_Click" />
+                </StackPanel>
+
+                <StackPanel x:Name="AddNewUserPanel" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10"  Visibility="Collapsed">
+                    <Button x:Name="AddNewUserButton" Content="+ Thêm mới" Width="97" Height="30" Background="#FF008EFA" Foreground="White" FontWeight="Bold" Click="AddNewUserButton_Click"/>
+                </StackPanel>
+            </Grid>
+
+            <DataGrid x:Name="PermissionDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" Visibility="Collapsed"/>
+            <DataGrid x:Name="AccessHistoryDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" Visibility="Collapsed"/>
+            <DataGrid x:Name="ActionHistoryDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="True" Visibility="Collapsed"/>
+
+            <!-- ContentControl để hiển thị AddUserView -->
+            <ContentControl x:Name="AddUserContentControl"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            Visibility="Collapsed"
+                            Margin="10"/>
+        </Grid>
     </Grid>
 </UserControl>
