--- a/Views/ResetPasswordView.xaml
+++ b/Views/ResetPasswordView.xaml
@@ -4,7 +4,7 @@
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  mc:Ignorable="d"
- d:DesignHeight="600" d:DesignWidth="1168" Background="LightBlue">
+ d:DesignHeight="600" d:DesignWidth="1168" Background="#FFFFFF">
     <Grid>
         <!-- Logo quay lại ở góc trên cùng bên trái -->
         <Button x:Name="BackButton" Width="40" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Background="Transparent" BorderBrush="Transparent" Click="BackButton_Click">
