--- a/Views/ResetPasswordView.xaml
+++ b/Views/ResetPasswordView.xaml
@@ -29,7 +29,7 @@
             <PasswordBox x:Name="ConfirmPasswordBox" Height="25" Width="250" Margin="0,5" HorizontalAlignment="Center"/>
 
             <!-- Nút xác nhận -->
-            <Button Content="Xác nhận" Width="100" HorizontalAlignment="Center" Background="#00FA9A" Height="25" Margin="10,30,10,0" Click="ConfirmButton_Click"/>
+            <Button Content="Xác nhận" Width="100" HorizontalAlignment="Center" Background="CornflowerBlue" Height="25" Margin="10,30,10,0" Click="ConfirmButton_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
