--- a/Views/AddUserView.xaml
+++ b/Views/AddUserView.xaml
@@ -18,7 +18,7 @@
         <Button x:Name="BackButton" 
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
-                Width="60" Height="50" 
+                Width="50" Height="40" 
                 Margin="10,10,0,0" 
                 Background="Transparent"
                 BorderBrush="Transparent" 
@@ -31,7 +31,7 @@
         <StackPanel Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1">
             <!-- Tiêu đề -->
             <TextBlock Text="Thêm Người Dùng Mới" 
-                       FontSize="18" FontWeight="Bold" 
+                       FontSize="25" FontWeight="Bold" 
                        HorizontalAlignment="Center" Margin="70,0,0,40"/>
 
             <!-- Tên đăng nhập -->
@@ -41,6 +41,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Tên đăng nhập" 
+                           FontSize ="15"
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left" 
                            Margin="5,0,0,0"/>
@@ -58,12 +59,13 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Họ và tên" 
+                            FontSize ="15"
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left" 
                            Margin="5,0,0,0"/>
                 <TextBox x:Name="FullNameTextBox" 
                          Grid.Column="1" 
-                         Margin="36,0,0,0"
+                         Margin="43.5,0,0,0"
                          HorizontalAlignment="Left"
                          Width="250"/>
             </Grid>
@@ -75,12 +77,13 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Mật khẩu" 
+                            FontSize ="15"
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left" 
                            Margin="5,0,0,0"/>
                 <PasswordBox x:Name="PasswordBox" 
                              Grid.Column="1" 
-                             Margin="37,0,0,0"
+                             Margin="45,0,0,0"
                              HorizontalAlignment="Left"
                              Width="250"/>
             </Grid>
@@ -92,12 +95,13 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Email" 
+                            FontSize ="15"
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left" 
                            Margin="5,0,0,0"/>
                 <TextBox x:Name="EmailTextBox" 
                          Grid.Column="1" 
-                         Margin="58,0,0,0"
+                         Margin="72,0,0,0"
                          HorizontalAlignment="Left"
                          Width="250"/>
             </Grid>
@@ -109,16 +113,16 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Vai trò" 
+                            FontSize ="15"
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left" 
                            Margin="5,0,0,0"/>
                 <ComboBox x:Name="RoleComboBox" 
                           Grid.Column="1" 
-                          Margin="52,0,0,0"
+                          Margin="64,0,0,0"
                           HorizontalAlignment="Left"
                           Width="250">
-                    <ComboBoxItem Content="Admin" />
-                    <ComboBoxItem Content="User" />
+                   
                 </ComboBox>
             </Grid>
 
