--- a/Views/BaoCaoView.xaml
+++ b/Views/BaoCaoView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.BaoCaoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="LightGreen">
+             Background="LightSteelBlue">
     <Grid>
         <!-- Thanh trượt Báo Cáo - Thống Kê -->
         <Expander x:Name="BaoCaoExpander"
@@ -11,7 +11,7 @@
                   Margin="10"
                   Foreground="Black"
                   Width="150"
-                  Background="CornflowerBlue"
+                  Background="HotPink"
                   FontWeight="Bold"
                   IsExpanded="False"
                   Panel.ZIndex="100">
