--- a/Views/QuanLyNguoiDungView.xaml
+++ b/Views/QuanLyNguoiDungView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyNguoiDungView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="LightGreen">
+             Background="LightSteelBlue">
     <Grid>
         <!-- Thanh trượt Quản Lý Người Dùng -->
         <Expander x:Name="QuanLyNguoiDungExpander"
@@ -11,7 +11,7 @@
                   Margin="10"
                   Foreground="Black"
                   Width="150"
-                  Background="CornflowerBlue"
+                  Background="HotPink"
                   FontWeight="Bold"
                   IsExpanded="False"
                   Panel.ZIndex="100">
@@ -25,19 +25,19 @@
         </Expander>
 
         <!-- Tìm kiếm -->
-        <StackPanel x:Name="SearchUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
-            <TextBox x:Name="SearchUserTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchUserBox_TextChanged"/>
-            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchUserButton_Click"/>
+        <StackPanel x:Name="SearchUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,8,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchUserTextBox" Width="300" Height="25" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchUserBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="25" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchUserButton_Click"/>
         </StackPanel>
 
-        <StackPanel x:Name="SearchAccessHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
-            <TextBox x:Name="SearchAccessHistoryTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchAccessHistoryBox_TextChanged"/>
-            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchAccessHistoryButton_Click"/>
+        <StackPanel x:Name="SearchAccessHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,8,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchAccessHistoryTextBox" Width="300" Height="25" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchAccessHistoryBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="25" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchAccessHistoryButton_Click"/>
         </StackPanel>
 
-        <StackPanel x:Name="SearchActionHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,5,10,0" Visibility="Collapsed">
-            <TextBox x:Name="SearchActionHistoryTextBox" Width="300" Height="30" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchActionHistoryBox_TextChanged"/>
-            <Button Content="Tìm kiếm" Width="100" Height="30" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchActionHistoryButton_Click"/>
+        <StackPanel x:Name="SearchActionHistoryPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10,8,10,0" Visibility="Collapsed">
+            <TextBox x:Name="SearchActionHistoryTextBox" Width="300" Height="25" VerticalContentAlignment="Center" TextAlignment="Left" Margin="0" TextChanged="SearchActionHistoryBox_TextChanged"/>
+            <Button Content="Tìm kiếm" Width="100" Height="25" Margin="5,0,0,0" Background="#0078D7" Foreground="White" FontWeight="Bold" Click="SearchActionHistoryButton_Click"/>
         </StackPanel>
 
         <!-- Grid để chứa nội dung -->
@@ -48,13 +48,13 @@
                 <DataGrid x:Name="UserDataGrid" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsReadOnly="False" Visibility="Collapsed"  />
 
                 <!-- Nút Cập nhật và Xóa -->
-                <StackPanel x:Name="UpdateDeleteUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Visibility="Collapsed">
-                    <Button x:Name="UpdateUserButton" Content="Cập nhật" Width="80" Height="30"  Background="#FF0B930B" Foreground="White" FontWeight="Bold" Click="UpdateUserButton_Click" />
+                <StackPanel x:Name="UpdateDeleteUserPanel" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20" Visibility="Collapsed">
+                    <Button x:Name="UpdateUserButton" Content="Cập nhật" Width="80" Height="30"  Background="#FF0B930B" Foreground="White" FontWeight="Bold" Margin="20"  Click="UpdateUserButton_Click" />
                     <Button x:Name="DeleteUserButton" Content="Xóa" Width="60" Height="30" Background="#FFE32B2B" Foreground="White" FontWeight="Bold" Click="DeleteUserButton_Click" />
                 </StackPanel>
 
-                <StackPanel x:Name="AddNewUserPanel" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10"  Visibility="Collapsed">
-                    <Button x:Name="AddNewUserButton" Content="+ Thêm mới" Width="97" Height="30" Background="#FF008EFA" Foreground="White" FontWeight="Bold" Click="AddNewUserButton_Click"/>
+                <StackPanel x:Name="AddNewUserPanel" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20"  Visibility="Collapsed">
+                    <Button x:Name="AddNewUserButton" Content="+ Thêm mới" Width="80" Height="30" Background="#FF008EFA" Foreground="White" FontWeight="Bold" Margin="20" Click="AddNewUserButton_Click"/>
                 </StackPanel>
             </Grid>
 
@@ -67,7 +67,7 @@
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
                             Visibility="Collapsed"
-                            Margin="10"/>
+                            />
         </Grid>
     </Grid>
 </UserControl>
