--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -10,7 +10,7 @@
         <!-- Dòng chứa logo và tiêu đề -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
             <Image Source="Assets/Logo.png" Width="40" Height="40" VerticalAlignment="Center" Margin="10,0,20,0"/>
-            <TextBlock FontSize="20" FontWeight="Bold" Text="Thông Tin Tài Khoản" Margin="-80,0,20,0" VerticalAlignment="Center"/>
+            <TextBlock FontSize="30" FontWeight="Bold" Text="Thông Tin Tài Khoản" Margin="-80,40,20,0" VerticalAlignment="Center"/>
         </StackPanel>
 
         <!-- Phần hiển thị thông tin tài khoản -->
@@ -31,31 +31,31 @@
             <!-- StackPanel để chứa các phần tử thông tin tài khoản -->
             <StackPanel x:Name="AccountInfoPanel" Grid.Row="0" Grid.ColumnSpan="2" Orientation="Vertical" Margin="0,10,0,0">
                 <!-- Tên đăng nhập (chỉ đọc) -->
-                <TextBlock Text="Tên đăng nhập:" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Text="Tên đăng nhập:"   FontSize="15" FontWeight="Bold" Margin="0,60,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <TextBlock x:Name="UserNameTextBlock"  FontSize="15" Margin="75,10,0,0" />
 
                 <!-- Họ và tên -->
-                <TextBlock Text="Họ và tên:" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Text="Họ và tên:"  FontSize="15" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <TextBox x:Name="FullNameTextBox" Margin="0,10,0,0" Width="300" VerticalAlignment="Center"/>
 
                 <!-- Email -->
-                <TextBlock Text="Email:" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Text="Email:"  FontSize="15" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <TextBox x:Name="EmailTextBox" Margin="0,10,0,0" Width="300" VerticalAlignment="Center"/>
 
                 <!-- Quyền -->
-                <TextBlock Text="Quyền:" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Text="Quyền:"  FontSize="15" FontWeight="Bold" Margin="0,10,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <ComboBox x:Name="RoleComboBox" Margin="0,10,0,0" Width="300" VerticalAlignment="Center"/>
 
                 <!-- Ngày tạo tài khoản (chỉ đọc) -->
-                <TextBlock Text="Ngày tạo tài khoản:" FontWeight="Bold" Margin="0,20,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Text="Ngày tạo tài khoản:"  FontSize="15" FontWeight="Bold" Margin="0,20,10,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <TextBlock x:Name="CreatedAtTextBlock" FontSize="15" Margin="75,10,0,0" VerticalAlignment="Center"/>
             </StackPanel>
 
             <!-- Nút lưu thông tin và đổi mật khẩu -->
             <StackPanel Orientation="Horizontal" Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="0,50,0,0">
-                <Button x:Name="SaveButton" Content="Lưu" Background="Green" Foreground="White" FontSize="16" Width="100" Height="30" 
+                <Button x:Name="SaveButton" Content="Lưu" Background="CornflowerBlue" Foreground="Black" FontSize="16" Width="100" Height="25" 
                         Margin="10,0,10,0" Click="SaveButton_Click"/>
-                <Button x:Name="ForgotPasswordButton" Content="Đổi mật khẩu" Background="Blue" Foreground="White" FontSize="16" Width="121" Height="30" 
+                <Button x:Name="ForgotPasswordButton" Content="Đổi mật khẩu" Background="CornflowerBlue" Foreground="Black" FontSize="16" Width="121" Height="25" 
                         Margin="10,0,10,0" Click="ForgotPasswordButton_Click"/>
             </StackPanel>
         </Grid>
