--- a/Views/AddUserView.xaml
+++ b/Views/AddUserView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="1168" Background="#FFFFFF">
+             d:DesignHeight="600" d:DesignWidth="1168" Background="Snow">
     <Grid>
         <!-- Định nghĩa 2 dòng trong grid -->
         <Grid.RowDefinitions>
