--- a/Views/QuanLySanXuatTrongTrotView.xaml
+++ b/Views/QuanLySanXuatTrongTrotView.xaml
@@ -15,29 +15,29 @@
         <!-- Nội dung cho phần đầu tiên -->
         <Grid Grid.Row="0" Background="LightSteelBlue" Margin="0,0,0,400" Grid.RowSpan="2">
 
-            <TextBlock Text="Sản Xuất Trồng Trọt" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="25" FontWeight="Medium" Margin="439,10,0,0" />
+            <TextBlock Text="Sản Xuất Trồng Trọt" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="20" FontWeight="Medium" Margin="439,0,0,0" Height="37" />
 
             <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,10,70,0" Width="320">
-                <TextBox x:Name="SearchTextBox" Height="30" Width="200" Margin="0,0,0,0" VerticalAlignment="Center" KeyDown="SearchTextBox_KeyDown" />
-                <Button Content="Tìm kiếm"  Background="Gray" Foreground="White" Height="30" VerticalAlignment="Center" Width="120" FontSize="14" Margin="0,0,0,0" Click="SearchButton_Click" />
+                <TextBox x:Name="SearchTextBox" Height="20" Width="200" Margin="0,0,0,0" VerticalAlignment="Center" KeyDown="SearchTextBox_KeyDown" />
+                <Button Content="Tìm kiếm"  Background="#FF008EFA" Foreground="White"  VerticalAlignment="Center" Width="100"  FontWeight="Medium" Margin="0,0,0,0" Click="SearchButton_Click" />
             </StackPanel>
 
             <!-- Move the "Thêm mới" button below the search area, on the bottom-right -->
-            <Button Content="+Thêm mới" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1055,44,0,0" Width="113" Height="25" Background="LightSkyBlue" FontSize="15" FontWeight="Medium" Click="AddNewButton_Click" />
+            <Button Content="+Thêm mới" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="White" Margin="130,10,0,0" Width="113"  Background="#FF008EFA" FontWeight="Medium" Click="AddNewButton_Click" />
 
             <Button Content="Quay Lại" 
                     VerticalAlignment="Top" 
                     HorizontalAlignment="Right" 
                     Margin="0,10,1110,0" 
                     Width="110" 
-                    Height="25" 
-                    Background="LightSkyBlue" 
-                    FontSize="16" 
+                   
+                   
+                    
                     FontWeight="Medium" 
                     Click="ResetButton_Click" />
             <!-- Thêm StackPanel cho các mục lựa chọn, ẩn mặc định -->
             <StackPanel Name="SearchOptions" Visibility="Collapsed" Margin="540,42,0,0">
-               
+
             </StackPanel>
 
         </Grid>
@@ -46,7 +46,7 @@
         <Grid Grid.Row="1" Background="White">
             <!-- Khu vực bảng dữ liệu -->
             <Grid Name="DataGridSection" Visibility="Visible">
-                <DataGrid Name="DataGridSXTT" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,-110,0,0">
+                <DataGrid Name="DataGridSXTT" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,-131,0,0" SelectionChanged="DataGridSXTT_SelectionChanged">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Cơ Sở" Binding="{Binding CoSo}" Width="200"/>
                         <DataGridTextColumn Header="Sản Phẩm" Binding="{Binding SanPham}" Width="80"/>
@@ -57,8 +57,8 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                        <Button Content="Chỉnh sửa" Click="EditButton_Click" Width="80" Height="25" Tag="{Binding ID}" Margin="0 0 5 0" Background="LightSkyBlue"  />
-                                        <Button Content="Xóa" Click="DeleteButton_Click" Width="80" Height="25" Tag="{Binding ID}" Margin="5,0,0,0" Background="LightSkyBlue" />
+                                        <Button Content="Chỉnh sửa" Click="EditButton_Click" Width="80" Height="25" Tag="{Binding ID}" Margin="0 0 5 0" Foreground="White" Background="#FF0B930B"  />
+                                        <Button Content="Xóa" Click="DeleteButton_Click" Width="80" Height="25" Tag="{Binding ID}" Margin="5,0,0,0" Foreground="White" Background="#FFE32B2B" />
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -81,7 +81,7 @@
             </Grid>
 
             <!-- Khu vực form thêm mới -->
-            <Border Name="AddNewForm" Visibility="Collapsed" Background="White" Margin="0,-110,0,0" Padding="0" CornerRadius="0">
+            <Border Name="AddNewForm" Visibility="Collapsed" Background="LightSeaGreen" Margin="0,-110,0,0" Padding="0" CornerRadius="0">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="400">
 
                     <TextBlock Text="Thêm thông tin" FontSize="18" Width="200" FontWeight="Bold" Margin="0,20,0,10" HorizontalAlignment="Center" />
